--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -14,7 +14,7 @@ server {
     index index.html;
 
     location /{
-        try_files $uri $uri/ $uri$args $uri$args/ /index.html;
+        try_files $uri $uri/ =404;
     }
 
     # redirect server error pages to the static page /50x.html
